# SEAL-CRL

./: .gitignore  LICENSE  README.md  __init__.py  environment.yml  environment_mac.yml  pyproject.toml  requirements.txt
experiments/: README_causal_grouping_analysis.md  README_spearman_vs_alignment.md  binary_class_counts.py  causal_grouping_analysis.py  hyperparameter_optimization.py  latent_vs_binary_analysis.py  predicate_class_counts.py  predicate_class_counts_grid.py  r2_concepts_vs_latents.py  r2_grouped_analysis.py  robustness_analysis.py  robustness_analysis_groups.py  spearman_vs_alignment.py
slurm_jobs/: convert_encodings.sh  create_env.sh
src/causality/: __init__.py
src/causality/data/: ithor_loader.py
src/causality/utils/: baseline_models.py  convert_encodings.py  estimator_models.py  math_utils.py  model_evaluation.py  r2_analysis.py  utils.py  visualization.py
src/causality/visualization/: __init__.py  plots.py
